syntax = "proto3";

package prediction;

service PredictionService {
  rpc CalculatePlayerRating (PlayerRatingRequest) returns (PlayerRatingResponse);
}

message PlayerRatingRequest {
  int32 oyuncuId = 1;
}

message PlayerRatingResponse {
  double rating = 1;
  string model = 2;
}
